--- a/server/views/pages/offence/alternative-sentence-length.njk
+++ b/server/views/pages/offence/alternative-sentence-length.njk
@@ -21,7 +21,8 @@
                     alternativeSentenceLength({
                         id: "sentenceLengths[0]",
                         name: "sentenceLengths[0]",
-                        selectedItem: "years"
+                        selectedItem: custodialSentenceLength.periodOrder[0],
+                        value: custodialSentenceLength[custodialSentenceLength.periodOrder[0]]
                     })
                 }}
 
@@ -29,7 +30,8 @@
                     alternativeSentenceLength({
                         id: "sentenceLengths[1]",
                         name: "sentenceLengths[1]",
-                        selectedItem: "months"
+                        selectedItem: custodialSentenceLength.periodOrder[1],
+                        value: custodialSentenceLength[custodialSentenceLength.periodOrder[1]]
                     })
                 }}
 
@@ -37,7 +39,8 @@
                     alternativeSentenceLength({
                         id: "sentenceLengths[2]",
                         name: "sentenceLengths[2]",
-                        selectedItem: "weeks"
+                        selectedItem: custodialSentenceLength.periodOrder[2],
+                        value: custodialSentenceLength[custodialSentenceLength.periodOrder[2]]
                     })
                 }}
 
@@ -45,7 +48,8 @@
                     alternativeSentenceLength({
                         id: "sentenceLengths[3]",
                         name: "sentenceLengths[3]",
-                        selectedItem: "days"
+                        selectedItem: custodialSentenceLength.periodOrder[3],
+                        value: custodialSentenceLength[custodialSentenceLength.periodOrder[3]]
                     })
                 }}
 
