--- a/server/views/pages/offence/sentence-length.njk
+++ b/server/views/pages/offence/sentence-length.njk
@@ -26,22 +26,26 @@
                     {
                         classes: "govuk-input--width-2",
                         label: "Years",
-                        name:"years"
+                        name:"years",
+                        value: custodialSentenceLength.years
                     },
                     {
                         classes: "govuk-input--width-2",
                         label: "Months",
-                        name:"months"
+                        name:"months",
+                        value: custodialSentenceLength.months
                     },
                     {
                         classes: "govuk-input--width-2",
                         label: "Weeks",
-                        name:"weeks"
+                        name:"weeks",
+                        value: custodialSentenceLength.weeks
                     },
                     {
                         classes: "govuk-input--width-2",
                         label: "Days",
-                        name:"days"
+                        name:"days",
+                        value: custodialSentenceLength.days
                     }
                     ]
                 }) }}
