wrote all edit tests

--- a/server/views/pages/offence/consecutive-to.njk
+++ b/server/views/pages/offence/consecutive-to.njk
@@ -18,7 +18,8 @@
                     id: "consecutiveTo",
                     classes: "govuk-input--width-5",
                     errorMessage:  errors | findError('consecutiveTo'),
-                    name: "consecutiveTo"
+                    name: "consecutiveTo",
+                    value: consecutiveTo,
                 }) }}
 
                 {{ govukButton({
