--- a/server/views/pages/offence/terror-related.njk
+++ b/server/views/pages/offence/terror-related.njk
@@ -22,11 +22,13 @@
                     items: [
                         {
                             value: "true",
-                            text: "Yes"
+                            text: "Yes",
+                            checked: terrorRelated === true
                         },
                         {
                             value: "false",
-                            text: "No"
+                            text: "No",
+                            checked: terrorRelated === false
                         }
                     ]
                 }) }}
