--- a/server/views/pages/offence/consecutive-to.njk
+++ b/server/views/pages/offence/consecutive-to.njk
@@ -19,7 +19,7 @@
                     classes: "govuk-input--width-5",
                     errorMessage:  errors | findError('consecutiveTo'),
                     name: "consecutiveTo",
-                    value: consecutiveTo,
+                    value: consecutiveTo
                 }) }}
 
                 {{ govukButton({
