keep values after submitting

--- a/server/views/pages/courtAppearance/alternative-sentence-length.njk
+++ b/server/views/pages/courtAppearance/alternative-sentence-length.njk
@@ -25,8 +25,8 @@
                         id: "firstSentenceLength",
                         name: "firstSentenceLength",
                         errorMessage: errors | findErrorsBeginningWith('firstSentenceLength'),
-                        selectedItem: custodialSentenceLength.periodOrder[0],
-                        value: custodialSentenceLength[custodialSentenceLength.periodOrder[0]]
+                        selectedItem: courtCaseAlternativeSentenceLengthForm['firstSentenceLength-period'],
+                        value: courtCaseAlternativeSentenceLengthForm['firstSentenceLength-value']
                     })
                 }}
 
@@ -35,8 +35,8 @@
                         id: "secondSentenceLength",
                         name: "secondSentenceLength",
                         errorMessage: errors | findErrorsBeginningWith('secondSentenceLength'),
-                        selectedItem: custodialSentenceLength.periodOrder[1],
-                        value: custodialSentenceLength[custodialSentenceLength.periodOrder[1]]
+                        selectedItem: courtCaseAlternativeSentenceLengthForm['secondSentenceLength-period'],
+                        value: courtCaseAlternativeSentenceLengthForm['secondSentenceLength-value']
                     })
                 }}
 
@@ -45,8 +45,8 @@
                         id: "thirdSentenceLength",
                         name: "thirdSentenceLength",
                         errorMessage: errors | findErrorsBeginningWith('thirdSentenceLength'),
-                        selectedItem: custodialSentenceLength.periodOrder[2],
-                        value: custodialSentenceLength[custodialSentenceLength.periodOrder[2]]
+                        selectedItem: courtCaseAlternativeSentenceLengthForm['thirdSentenceLength-period'],
+                        value: courtCaseAlternativeSentenceLengthForm['thirdSentenceLength-value']
                     })
                 }}
 
@@ -55,8 +55,8 @@
                         id: "fourthSentenceLength",
                         name: "fourthSentenceLength",
                         errorMessage: errors | findErrorsBeginningWith('fourthSentenceLength'),
-                        selectedItem: custodialSentenceLength.periodOrder[3],
-                        value: custodialSentenceLength[custodialSentenceLength.periodOrder[3]]
+                        selectedItem: courtCaseAlternativeSentenceLengthForm['fourthSentenceLength-period'],
+                        value: courtCaseAlternativeSentenceLengthForm['fourthSentenceLength-value']
                     })
                 }}
 
