check checkbox if no reference number

--- a/server/views/pages/courtAppearance/reference.njk
+++ b/server/views/pages/courtAppearance/reference.njk
@@ -30,10 +30,12 @@
                     id: "noCaseReference",
                     name: "noCaseReference",
                     errorMessage: errors | findError('noCaseReference'),
+
                     items: [
                         {
-                        value: "true",
-                        text: "There is no case reference"
+                            value: "true",
+                            text: "There is no case reference",
+                            checked: courtCaseReferenceForm.noCaseReference === 'true'
                         }
                     ]
                     }) }}
