--- a/server/views/pages/courtAppearance/reference.njk
+++ b/server/views/pages/courtAppearance/reference.njk
@@ -1,7 +1,9 @@
-{% extends "../../partials/prisonerBannerLayout.njk" %}
+{% extends "../../partials/prisonerBannerBackLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
+{% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
+
 
 {% set pageTitle = applicationName + " - Add a case reference" %}
 
@@ -18,11 +20,25 @@
                         classes: "govuk-label--l",
                         isPageHeading: true
                     },
-                    id: "reference-number",
+                    id: "referenceNumber",
                     name: "referenceNumber",
                     errorMessage: errors | findError('referenceNumber'),
-                    value: caseReferenceNumber
+                    value: courtCaseReferenceForm.referenceNumber
                 }) }}
+
+                {{ govukCheckboxes({
+                    id: "noCaseReference",
+                    name: "noCaseReference",
+                    errorMessage: errors | findError('noCaseReference'),
+
+                    items: [
+                        {
+                            value: "true",
+                            text: "There is no case reference",
+                            checked: courtCaseReferenceForm.noCaseReference === 'true'
+                        }
+                    ]
+                    }) }}
 
                 {{ govukButton({
                     text: "Continue"
@@ -32,4 +48,8 @@
         </div>
     </div>
 
+{% endblock %}
+
+{% block javascripts %}
+    <script src="/assets/js/caseReference.js"></script>
 {% endblock %}
