--- a/server/views/pages/courtAppearance/tagged-bail.njk
+++ b/server/views/pages/courtAppearance/tagged-bail.njk
@@ -13,7 +13,7 @@
     label: {
         text: "Number of days"
     },
-    value: taggedBailForm.taggedBail
+    value: taggedBailForm.taggedBail,
     inputmode: "numeric",
     classes: "govuk-input--width-3"
 }) }}
