RASS-216 refactor, add back link (#260)
* RASS-216 refactor, add back link

* set value if exists

* fixes

--- a/server/views/pages/courtAppearance/tagged-bail.njk
+++ b/server/views/pages/courtAppearance/tagged-bail.njk
@@ -13,6 +13,7 @@
     label: {
         text: "Number of days"
     },
+    value: taggedBailForm.taggedBail,
     inputmode: "numeric",
     classes: "govuk-input--width-3"
 }) }}
